dev/test_programs/INVALID/group1/exp5.go
package main

func main(){
	var x int = 3
	var y float;
	y = *float(x);
}
